--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -1,4 +1,4 @@
- .hero{
+ .hero.variant-one{
     padding-top: 130px;
     padding-bottom: 120px;
     height: 660px;
@@ -6,4 +6,14 @@
     width: 100%;
     border: solid #707070 2.5px;
     background-color: #CEFBFF;
+    margin-bottom: 104px;
+  }
+
+  .variant-two{
+    height: 314px;
+    background-color: #ECCEFF;
+    box-sizing: border-box;
+    border: solid #707070 2.5px;
+    margin-top: 147px;
+
   }
